--- a/one.html
+++ b/one.html
@@ -8,11 +8,40 @@
 </head>
 <body>
     <h4>標題</h4>
-<h1>h1</h1>
-<h2>h2</h2>
-<h3>h3</h3>
-<h4>h4</h4>
-<h5>h5</h5>
-<h6>h6</h6>
+    <h1>h1</h1>
+    <h2>h2</h2>
+    <h3>h3</h3>
+    <h4>h4</h4>
+    <h5>h5</h5>
+    <h6>h6</h6>
+    <h4>水平線</h4>
+    <hr>
+    <hr>
+    <h4>段落</h4>
+    第一行段落
+    <br>
+    第二行段落
+    <P>第一行段落</P>
+    <P>第二行段落</P>
+    <hr>
+    <h4>標籤</h4>
+    Lorem, ipsum dolor  <span style=color:red>sit amet consectetur adipisicing elit.</span>  Nulla hic illo numquam, error, assumenda omnis, commodi odio labore fuga beatae deleniti at earum delectus illum obcaecati! Rem laborum aliquam fugit.
+    Possimus ducimus nam deserunt,quam inventore adipisci dolorum aut maxime eum voluptatibus. Nam accusamus, laboriosam magni debitis exercitationem nesciunt eius veniam nulla. Ipsum obcaecati, recusandae quo quidem sit asperiores fuga!
+    Explicabo quas,<span style="color:chartreuse">officia illum repudiandae veniam libero vitae nostrum error deleniti doloremque enim soluta quisquam? Corrupti quam eius, sequi culpa cum error maxime sit! Nesciunt placeat eaque quos incidunt ratione?</span>
+    <hr>
+    <h4>格式化段落</h4>
+    <pre>
+        123456
+    </pre>
+    <hr>
+    <h4>文字格式化</h4>
+    <b>粗體標籤</b>
+    <i>斜體標籤
+
+    <sub>下標標籤</sub>
+    <sup>上標標籤</sup>
+    <ins>新增標籤</ins>
+    <del>刪除標籤</del>
+    <mark>標籤</mark>
 </body>
 </html>
