--- a/one.html
+++ b/one.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>標題</h4>
+    <h4 id="up">標題</h4>
     <h1>h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
@@ -43,5 +43,65 @@
     <ins>新增標籤</ins>
     <del>刪除標籤</del>
     <mark>標籤</mark>
+    <mark style="background-color:pink">標籤</mark>       
+    <hr>
+    <h4>超連結</h4>
+    <a href="https://www.nutc.edu.tw">國立台中科技大學</a> 
+    <!-- 另開分頁 -->
+    <a href="https://www.nutc.edu.tw" target="_blank">國立台中科技大學</a>   
+    <h4>錨點</h4>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <a href="#up">移到最上面</a>    
+    <hr>
+    <h4>圖片</h4>
+    <img src="shiba.png" alt="" width="">
+    <img src="https://fakeimg.pl/300x200/200">
+    <hr>
+    <h4>ul li 標籤</h4>
+
+    <ul type="square"> 
+        <li>001</li>
+        <li>002</li>
+        <li>003</li>
+        <li>004</li>
+        <li>005</li>
+    </ul>
+    <ol type="I">
+        <li>001</li>
+        <li>002</li>
+        <li>003</li>
+        <li>004</li>
+        <li>005</li>
+    </ol>
+    <hr>
+    <h4> input輸入</h4>
+    <br>
+    帳號:<input type="text" value="pt2057">
+    <br>
+    密碼:<input type="password">
+    <br>
+    輸入數字:<input type="number" min="0" max="10">
+    <br>
+    複選:
+    <input type="checkbox">看書
+    <input type="checkbox">旅行
+    <br>
+    單選:
+    <input type="radio" name="1">男生
+    <input type="radio" name="1">女生
+    <br>
+    按鈕:
+    <input type="button" value="按鈕" >
+    <input type="submit" value="按鈕2" >
+    <button>按鈕3</button>
+    <br>
+    日期:
+    <input type="date" min="2022-10-01" max="2022-10-31">
+    <br>
+    時間:
+    <input type="time">
+    <br>
+    檔案上傳:
+    <input type="file">
 </body>
 </html>
